# simpletorrent

./: .gitignore  CMakeLists.txt  README.md  TechnicalDesign.md  compare.sh  indian.torrent
example-torrents/: mars.torrent
include/simpletorrent/: Buffer.h  Constant.h  CustomException.h  Duration.h  FastRandom.h  FileManager.h  GlobalState.h  Helper.h  Helper2.h  Helper3.h  Helper4.h  HttpTracker.h  Logger.h  MessageUtil.h  Metadata.h  Parser.h  Peer.h  PeerErrorCode.h  PeerException.h  PeerManager.h  PieceManager.h  PieceManager2.h  RarityManager.h  StateTransition.h  Statistics.h  TorrentClient.h  Tracker.h  UdpTracker.h  Util.h
scripts/: compare.sh
src/: buffer.cpp  file_manager.cpp  global_state.cpp  http_tracker.cpp  logger.cpp  main.cpp  parser.cpp  peer.cpp  peer_error_code.cpp  peer_manager.cpp  piece_manager.cpp  piece_manager_2.cpp  rarity_manager.cpp  statistics.cpp  torrent_client.cpp  tracker.cpp  udp_tracker.cpp
tests/: CMakeLists.txt  a_test.cpp  buffer_test.cpp  main.cpp  piece_manager_test.cpp  rarity_manager_test.cpp
